[project]
name = "evsfr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jesse Charlton", email = "57236497+jchar32@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "ipympl>=0.9.7",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "scipy>=1.16.0",
    "xarray>=2025.7.1",
]

[project.scripts]
evsfr = "evsfr:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ty>=0.0.1a14",
]
